# zuu-predecessor1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/zrcl/: app_pandoc.py  base64_image.py  bit_operation.py  cls_inheritance.py  crack_zip_password.py  ext.py  ext_cryptography.py  ext_discord.py  ext_easyocr.py  ext_hashlib.py  ext_json.py  ext_keyring.py  ext_logging.py  ext_moviepy.py  ext_os.py  ext_pillow.py  ext_pygetwindow.py  ext_pyscreeze.py  ext_random.py  ext_re.py  ext_screeninfo.py  ext_string.py  ext_subprocess.py  ext_time.py  ext_typing.py  ext_yaml.py  file.py  github.py  markdown.py  mediawiki_parser.py  png_zip.py  text_parsing.py  tool_btype.py  tool_coord_1.py  tool_runner.py  tool_sysinfo.py  win32wnd.py
src/zrcl/beta_desktop_automation/: __init__.py  feature_cropper.py  region_marker.py
tests/: test_ext.py  test_ext_discord.py  test_ext_yaml.py  test_file.py
