#
[project]
name = "zrcl"
version = "0.4.3"
description = "Zack's common reusable library"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pygetwindow>=0.0.9",
    "pywin32>=306",
    "pyscreeze>=0.1.30",
    "keyring>=25.2.1",
    "cryptography>=42.0.8",
    "black>=24.4.2",
    "pillow>=10.3.0",
    "pyautogui>=0.9.54",
    "screeninfo>=0.8.1",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "requests>=2.32.3",
    "discord>=2.3.2",
    "pytest>=8.2.2",
    "psutil<=5.9.8",
    "numpy<2",
    "easyocr>=1.7.1",
    "thefuzz>=0.22.1",
    "orjson>=3.10.6",
    "requests>=2.32.3",
    "moviepy>=1.0.3",
    "pyyaml>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zrcl"]

[tool.ruff]
ignore = ["F401"]

[project.scripts]
zrcl = "zrcl.tool_runner:run"
